# zero2prod2

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20220822003056_create_subscriptions_table.sql  20220917024014_make_status_not_null_in_subscriptions.sql  20220918012520_create_subscription_tokens_table.sql  20221004074326_create_users_table.sql  20221022002324_seed_user.sql  20221105002925_create_idempotency_table.sql  20221106004856_relax_null_checks_on_idempotency.sql  20221112005206_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_db_retry.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
