[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.22"
config = "0.13.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.13.1"
reqwest = { version = "0.11.11", features = ["json"] }
