[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.22"
config = "0.13.2"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde-aux = "3.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9.0"
uuid = { version = "1.1.2", features = ["v4"] }
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.9.0"
once_cell = "1.13.1"
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5.14"
